[WebGL] Validation function for compressed formats incorrect https://bugs.webkit.org/show_bug.cgi?id=127023

Reviewed by Dean Jackson.

No new tests. Covered by existing WebGL compressed texture tests.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::validateCompressedTexFuncData): Revise to match specifications.


Canonical link: https://commits.webkit.org/145062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162085 268f45cc-cd09-0410-ab3c-d52691b4dbfc